frontend/shared/scss/components/inputs.scss
@use '../base/variables' as *;
@use '../base/text-styles';

.input-spacing {
    max-width: 340px;

    @media (max-width: 450px) {
        max-width: none;
    }
}

.input {
    @extend .style-input;
    @extend .style-input-shadow;
    color: $color-dark;
    border: $border-width solid $color-gray-light;
    background: var(--color-white, white);
    border-radius: $border-radius;
    padding: 5px 15px;
    height: $input-height;
    line-height: $input-height - 10px - 2 * $border-width;
    margin: 0;
    width: 100%;
    box-sizing: border-box;
    display: block;
    transition: border-color 0.2s;
    outline: none;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);

    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;

    &:hover {
        border-color: $color-primary-gray-light;
    }

    &.option {
        margin-top: 7px
    }

    &:disabled {
        color: $color-gray;
        cursor: not-allowed;

        // Safari fix color opacity
        -webkit-text-fill-color: $color-gray;
        opacity: 1; /* required on iOS */

        &:hover {
            border-color: $color-gray-light;
        }
    }

    &:focus,
    &:focus-within {
        border-color: $color-primary;
    }

    &::placeholder {
        color: $color-gray;
    }

    &.error {
        border-color: $color-error-border;

        &:focus,
        &:focus-within {
            border-color: $color-error-border-focus;
        }
    }
}

input.input {
    text-overflow: ellipsis;
}

.input-errors {
    .input {
        border-color: $color-error-border;

        &:focus,
        &:focus-within {
            border-color: $color-error-border-focus;
        }
    }
}

textarea.input {
    max-width: none;
    padding: 12px 15px;
    // 3 lines height
    line-height: $input-height - 18px - 2 * $border-width;

    height: $input-height + 4px + 10px + ($input-height - 18px - 2 * $border-width) * 2;
    resize: none;
}

select.input {
    cursor: pointer;

    // Remove dotted line in Firefox
    &:-moz-focusring {
        color: transparent;
        text-shadow: 0 0 0 #000;
    }
}

// Used to put multiple inputs next to each other
.input-group {
    display: flex;
    flex-direction: row;
    @extend .input-spacing;

    &.max {
        max-width: none;
    }

    & > * {
        flex-grow: 1;
        margin: 0 5px;

        &:first-child {
            margin-left: 0;
        }

        &:last-child {
            margin-right: 0;
        }

        .input {
            margin: 0;
        }
    }
}

.input-icon-container {
    position: relative;

    &.icon {
        display: block;
        width: auto;
        height: auto;
        overflow: visible;
        white-space: inherit;
    }

    &::before {
        position: absolute;
        top: 50%;
        transform: translate(0, -50%);
        pointer-events: none;
    }

    &:not(.right) {
        > * {
            padding-left: 43px;
        }

        &::before {
            left: 12px;
        }
    }
  
    &.right {
        > * {
            padding-right: 35px;
        }

        &::before {
            right: 10px;
        }
    }
}

.input-with-buttons {
    display: flex;
    flex-direction: row;
    align-items: center;

    > div:first-child {
        flex-grow: 1;
    }

    > div:last-child {
        padding-left: 10px;
        flex-shrink: 0;
    }
}

.textarea-container {
    padding-bottom: 20px;
    padding-left: 35px;

    @media (max-width: 450px) {
        padding-left: 0;
    }
}

